Implemented basic puzzle class
The ability to add specific colors has been added too

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
     	<canvas id="puzzle"></canvas>
+    	<button id='add_button'>Add Black</button>
     	
     	<script src="main.js"></script>
     </body>
