Added AJAX class

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Color Hangman</title>
         
+        <script src="AJAX.js"></script>
         <script src="puzzle.js"></script>
     </head>
     <body>
