Added preliminary guess input

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -16,6 +16,11 @@
 
 			<div id="color_panel"></div>
 
+			<div id="guess_panel">
+				<textarea id="guess_input" name="guess"></textarea>
+				<button id="guess_submit">SUBMIT</button>
+			</div>
+
 			<script src="main.js"></script>
 		</div>
 	</body>
