--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -12,9 +12,10 @@
 	</head>
 	<body>
 		<div>
-			<canvas id="puzzle" class="puzzle"></canvas>
-
-			<div id="color_panel"></div>
+			<div id="puzzle_panel">
+				<canvas id="puzzle_canvas" class="puzzle"></canvas>
+				<div id="color_panel"></div>
+			</div>
 
 			<div id="guess_panel">
 				<textarea id="guess_input" name="guess"></textarea>
