--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -3,7 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Color Hangman</title>
-
 		<link rel="stylesheet" href="styles.css" />
 
 		<script src="AJAX.js"></script>
@@ -11,6 +10,7 @@
 		<script src="colorPanel.js"></script>
 	</head>
 	<body>
+		<h1>Color Hangman!</h1>
 		<div>
 			<div id="puzzle_panel">
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
