--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -14,12 +14,19 @@
 		<div>
 			<div id="puzzle_panel">
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
-				<div id="color_panel"></div>
+				<div>
+					<div id="score_panel">
+						Score:
+					</div>
+					<div id="color_panel"></div>
+				</div>
 			</div>
 
 			<div id="guess_panel">
 				<textarea id="guess_input" name="guess"></textarea>
-				<button id="guess_submit">SUBMIT</button>
+				<button id="guess_submit">
+					SUBMIT
+				</button>
 			</div>
 
 			<script src="main.js"></script>
