More score updates

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -15,8 +15,8 @@
 			<div id="puzzle_panel">
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
 				<div>
+					<label for="score_panel">Score: </label>
 					<div id="score_panel">
-						Score:
 					</div>
 					<div id="color_panel"></div>
 				</div>
