--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -8,6 +8,7 @@
 		<script src="AJAX.js"></script>
 		<script src="puzzle.js"></script>
 		<script src="colorPanel.js"></script>
+		<script src="queryParams.js"></script>
 	</head>
 	<body>
 		<h1>Color Hangman!</h1>
@@ -26,6 +27,9 @@
 				<textarea id="guess_input" name="guess"></textarea>
 				<button id="guess_submit">
 					SUBMIT
+				</button>
+				<button>
+					PUZZLES
 				</button>
 			</div>
 
