--- a/client/HMColorClient/upload.html
+++ b/client/HMColorClient/upload.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <form id="fileUpload" action="./upl" method="post" enctype="multipart/form-data">
+    <form id="fileUpload" action="puzzle.py/upl" method="post" enctype="multipart/form-data">
       File: <input type="file" name="image_to_upload" accept="image/jpeg" required/>
       <input type="submit" value="Upload"/><br/>
       Answer: <input type="text" name="answer" required/>
