Added button to link to puzzles page.

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -17,8 +17,7 @@
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
 				<div>
 					<label for="score_panel">Score: </label>
-					<div id="score_panel">
-					</div>
+					<div id="score_panel"></div>
 					<div id="color_panel"></div>
 				</div>
 			</div>
@@ -28,7 +27,8 @@
 				<button id="guess_submit">
 					SUBMIT
 				</button>
-				<button>
+
+				<button id="puzzles_button">
 					PUZZLES
 				</button>
 			</div>
