More work on puzzle list

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -33,7 +33,7 @@
 				</button>
 			</div>
 
-			<script src="main.js"></script>
+			<script src="app_main.js"></script>
 		</div>
 	</body>
 </html>
