--- a/client/HMColorClient/puzzles.html
+++ b/client/HMColorClient/puzzles.html
@@ -3,8 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Color Hangman - Puzzles</title>
+
+		<script src="AJAX.js"></script>		
 	</head>
 	<body>
-		Puzzle List
+		<ul id="puzzle_list">
+		</ol>
+		
+		
+		<script src="app_puzzles.js"></script>
 	</body>
 </html>
