Image solution shows after guess is submitted

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -37,6 +37,8 @@
 					Upload
 				</button>
 			</div>
+			
+			<div id="confirmation_panel" class="hidden"></div>
 
 			<script src="app_main.js"></script>
 		</div>
