--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -29,9 +29,12 @@
 					<input type="submit" />
 				</form>
 
-				<button id="puzzles_button">
+				<select id="puzzles_dropdown">
+				  
+				</select>
+			<!--	<button id="puzzles_button">
 					Puzzles
-				</button> 
+				</button> --> 
 
 				<button id="upload_button">
 					Upload
