--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -29,13 +29,8 @@
 					<input type="submit" />
 				</form>
 
-				<select id="puzzles_dropdown">
-				  
-				</select>
-			<!--	<button id="puzzles_button">
-					Puzzles
-				</button> --> 
-
+				<select name="im_file" id="puzzles_dropdown" onchange="javascript:changePuzzle(this);"></select>
+				
 				<button id="upload_button">
 					Upload
 				</button>
