Fixed issue with query params

--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -11,8 +11,8 @@
 		<script src="queryParams.js"></script>
 	</head>
 	<body>
-		<h1>Color Hangman!</h1>
-		<div>
+		<div class="app_container">
+			<h1>Color Hangman!</h1>
 			<div id="puzzle_panel">
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
 				<div>
