--- a/client/HMColorClient/index.html
+++ b/client/HMColorClient/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Color Hangman</title>
+		<title>Hangman in Color</title>
 		<link rel="stylesheet" href="styles.css" />
 
 		<script src="AJAX.js"></script>
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="app_container">
-			<h1>Color Hangman!</h1>
+			<h1>Hangman in Color</h1>
 			<div id="puzzle_panel">
 				<canvas id="puzzle_canvas" class="puzzle"></canvas>
 				<div>
@@ -23,12 +23,15 @@
 				</div>
 			</div>
 
-			<div id="guess_panel">
+			<div id="guess_panel" class="tool_panel">
 				<form action="javascript:submitGuess()">
 					<input type="text" id="guess_input" name="guess" />
 					<input type="submit" />
 				</form>
-
+			</div>
+			
+			<div class="tool_panel">
+				Select Puzzle: 
 				<select name="im_file" id="puzzles_dropdown" onchange="javascript:changePuzzle(this);"></select>
 				
 				<button id="upload_button">
